[package]
name = "chudtendo"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
sdl2 = { version = "0.38", features = ["use-pkgconfig"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
